add server error notifications

--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -43,9 +43,13 @@
 "No chat selected" = "No chat selected";
 "No chat. Creating one..." = "No chat. Creating one...";
 "No data received" = "No data received";
+"No internet connection for TTS requests." = "No internet connection for TTS requests.";
 "OK" = "OK";
 "Open full screen editor" = "Open full screen editor";
+"Realtime Voice Issue" = "Realtime Voice Issue";
+"Realtime voice unavailable" = "Realtime voice unavailable";
 "Read Aloud" = "Read Aloud";
+"Received audio data could not be played." = "Received audio data could not be played.";
 "Reasoning preview" = "Reasoning preview";
 "Refresh Model List" = "Refresh Model List";
 "Regenerate" = "Regenerate";
@@ -57,6 +61,8 @@
 "Select Text" = "Select Text";
 "Send Message" = "Send Message";
 "Server Address" = "Server Address";
+"TTS response was not audio data." = "TTS response was not audio data.";
+"TTS response was not audio: %@" = "TTS response was not audio: %@";
 "Set GPT weights failed (HTTP %d)" = "Set GPT weights failed (HTTP %d)";
 "Set GPT weights failed: %@" = "Set GPT weights failed: %@";
 "Set SoVITS weights failed (HTTP %d)" = "Set SoVITS weights failed (HTTP %d)";
@@ -71,16 +77,28 @@
 "Start Realtime Voice Conversation" = "Start Realtime Voice Conversation";
 "Stop Generation" = "Stop Generation";
 "Text Language" = "Text Language";
+"Text Generation Issue" = "Text Generation Issue";
+"Text server unreachable" = "Text server unreachable";
 "Thinking" = "Thinking";
 "Thinking Complete" = "Thinking Complete";
 "This action cannot be undone." = "This action cannot be undone.";
 "Traditional Chinese" = "Traditional Chinese";
 "TTS server error: %d" = "TTS server error: %d";
+"TTS server error: %d (%@)" = "TTS server error: %d (%@)";
+"TTS server unavailable" = "TTS server unavailable";
+"TTS server unreachable" = "TTS server unreachable";
 "Type your message..." = "Type your message...";
+"Unable to connect to the TTS server at %@" = "Unable to connect to the TTS server at %@";
 "Unable to construct TTS URL" = "Unable to construct TTS URL";
+"Unable to construct TTS URL from %@" = "Unable to construct TTS URL from %@";
+"Unable to reach the text server. Please check your connection or server settings." = "Unable to reach the text server. Please check your connection or server settings.";
 "Unable to parse model list" = "Unable to parse model list";
 "Unable to serialize JSON" = "Unable to serialize JSON";
+"Voice Playback Issue" = "Voice Playback Issue";
 "Unknown error" = "Unknown error";
+"You appear to be offline. Please check your internet connection." = "You appear to be offline. Please check your internet connection.";
+"The network connection was lost." = "The network connection was lost.";
+"The request timed out. The server may be offline or busy." = "The request timed out. The server may be offline or busy.";
 "Voice Output" = "Voice Output";
 "Voice Server" = "Voice Server";
 "Chat Server" = "Chat Server";
