--- a/Voice Chat/ja.lproj/Localizable.strings
+++ b/Voice Chat/ja.lproj/Localizable.strings
@@ -117,3 +117,25 @@
 "No Chat Selected" = "チャットが選択されていません";
 "Start a new conversation to begin talking." = "新しい会話を開始してチャットを始めましょう。";
 "Toggle chat list" = "チャット一覧を切り替え";
+
+"Text Generation Issue" = "テキスト生成の問題";
+"Voice Playback Issue" = "音声再生の問題";
+"Realtime Voice Issue" = "リアルタイム音声の問題";
+"Text server unreachable" = "テキストサーバーに接続できません";
+"TTS server unreachable" = "TTS サーバーに接続できません";
+"TTS server unavailable" = "TTS サーバーを利用できません";
+"Unable to construct TTS URL from %@" = "%@ から TTS URL を生成できませんでした";
+"Unable to connect to the TTS server at %@" = "%@ のTTSサーバーに接続できませんでした";
+"No internet connection for TTS requests." = "TTSリクエストに必要なインターネット接続がありません。";
+"Connection to the TTS server was lost during playback." = "再生中にTTSサーバーとの接続が切れました。";
+"The TTS server did not respond in time." = "TTSサーバーの応答がタイムアウトしました。";
+"Unable to reach the text server. Please check your connection or server settings." = "テキストサーバーに到達できません。接続とサーバー設定を確認してください。";
+"Realtime voice unavailable" = "リアルタイム音声を利用できません";
+"Could not connect to %@" = "%@ に接続できませんでした";
+"You appear to be offline. Please check your internet connection." = "オフラインのようです。ネットワーク接続を確認してください。";
+"The network connection was lost." = "ネットワーク接続が失われました。";
+"The request timed out. The server may be offline or busy." = "リクエストがタイムアウトしました。サーバーがオフラインまたは混雑している可能性があります。";
+"TTS server error: %d (%@)" = "TTS サーバーエラー: %d (%@)";
+"TTS response was not audio data." = "TTSの応答が音声データではありませんでした。";
+"TTS response was not audio: %@" = "TTSの応答が音声ではありません: %@";
+"Received audio data could not be played." = "受信した音声データを再生できませんでした。";
