--- a/Voice Chat/zh-Hant.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hant.lproj/Localizable.strings
@@ -117,3 +117,25 @@
 "No Chat Selected" = "未選取聊天";
 "Start a new conversation to begin talking." = "開始新的對話即可開始交流。";
 "Toggle chat list" = "切換聊天列表";
+
+"Text Generation Issue" = "文字生成問題";
+"Voice Playback Issue" = "語音播放問題";
+"Realtime Voice Issue" = "即時語音問題";
+"Text server unreachable" = "無法連線文字伺服器";
+"TTS server unreachable" = "無法連線 TTS 伺服器";
+"TTS server unavailable" = "TTS 伺服器不可用";
+"Unable to construct TTS URL from %@" = "無法從 %@ 建立 TTS URL";
+"Unable to connect to the TTS server at %@" = "無法連線位於 %@ 的 TTS 伺服器";
+"No internet connection for TTS requests." = "TTS 請求沒有可用的網路連線。";
+"Connection to the TTS server was lost during playback." = "播放過程中與 TTS 伺服器的連線中斷。";
+"The TTS server did not respond in time." = "TTS 伺服器未及時回應。";
+"Unable to reach the text server. Please check your connection or server settings." = "無法連線文字伺服器。請檢查網路或伺服器設定。";
+"Realtime voice unavailable" = "即時語音不可用";
+"Could not connect to %@" = "無法連線到 %@";
+"You appear to be offline. Please check your internet connection." = "看起來已離線，請檢查網路連線。";
+"The network connection was lost." = "網路連線已中斷。";
+"The request timed out. The server may be offline or busy." = "請求逾時，伺服器可能離線或忙碌。";
+"TTS server error: %d (%@)" = "TTS 伺服器錯誤：%d（%@）";
+"TTS response was not audio data." = "TTS 回應不是音訊資料。";
+"TTS response was not audio: %@" = "TTS 回應不是音訊：%@";
+"Received audio data could not be played." = "收到的音訊資料無法播放。";
