add developer mode

--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -135,3 +135,43 @@
 "No Chat Selected" = "No Chat Selected";
 "Start a new conversation to begin talking." = "Start a new conversation to begin talking.";
 "Toggle chat list" = "Toggle chat list";
+"Developer" = "Developer";
+"Developer Mode" = "Developer Mode";
+"Details" = "Details";
+"Message Details" = "Message Details";
+"Not Available" = "Not Available";
+"Yes" = "Yes";
+"No" = "No";
+"User" = "User";
+"Assistant" = "Assistant";
+"Identity" = "Identity";
+"Branching" = "Branching";
+"Session" = "Session";
+"Telemetry" = "Telemetry";
+"Timing" = "Timing";
+"Message ID" = "Message ID";
+"Created At" = "Created At";
+"Sender" = "Sender";
+"Active" = "Active";
+"Active Child Message ID" = "Active Child Message ID";
+"Parent Message ID" = "Parent Message ID";
+"Child Messages" = "Child Messages";
+"Child Message IDs" = "Child Message IDs";
+"Chat Session ID" = "Chat Session ID";
+"Chat Session Title" = "Chat Session Title";
+"Active Root Message ID" = "Active Root Message ID";
+"Model Identifier" = "Model Identifier";
+"API Base URL" = "API Base URL";
+"Request ID" = "Request ID";
+"Finish Reason" = "Finish Reason";
+"Error Description" = "Error Description";
+"Delta Count" = "Delta Count";
+"Character Count" = "Character Count";
+"Prompt Message Count" = "Prompt Message Count";
+"Prompt Character Count" = "Prompt Character Count";
+"Stream Started At" = "Stream Started At";
+"First Token At" = "First Token At";
+"Stream Completed At" = "Stream Completed At";
+"Time To First Token" = "Time To First Token";
+"Stream Duration" = "Stream Duration";
+"Generation Duration" = "Generation Duration";
