--- a/Voice Chat/ja.lproj/Localizable.strings
+++ b/Voice Chat/ja.lproj/Localizable.strings
@@ -139,3 +139,43 @@
 "TTS response was not audio data." = "TTSの応答が音声データではありませんでした。";
 "TTS response was not audio: %@" = "TTSの応答が音声ではありません: %@";
 "Received audio data could not be played." = "受信した音声データを再生できませんでした。";
+"Developer" = "開発者";
+"Developer Mode" = "開発者モード";
+"Details" = "詳細";
+"Message Details" = "メッセージ詳細";
+"Not Available" = "なし";
+"Yes" = "はい";
+"No" = "いいえ";
+"User" = "ユーザー";
+"Assistant" = "アシスタント";
+"Identity" = "識別情報";
+"Branching" = "分岐";
+"Session" = "セッション";
+"Telemetry" = "テレメトリ";
+"Timing" = "タイミング";
+"Message ID" = "メッセージID";
+"Created At" = "作成日時";
+"Sender" = "送信者";
+"Active" = "有効";
+"Active Child Message ID" = "アクティブな子メッセージID";
+"Parent Message ID" = "親メッセージID";
+"Child Messages" = "子メッセージ数";
+"Child Message IDs" = "子メッセージID一覧";
+"Chat Session ID" = "チャットセッションID";
+"Chat Session Title" = "セッションタイトル";
+"Active Root Message ID" = "アクティブルートメッセージID";
+"Model Identifier" = "モデル識別子";
+"API Base URL" = "APIベースURL";
+"Request ID" = "リクエストID";
+"Finish Reason" = "終了理由";
+"Error Description" = "エラー内容";
+"Delta Count" = "デルタ数";
+"Character Count" = "文字数";
+"Prompt Message Count" = "プロンプトのメッセージ数";
+"Prompt Character Count" = "プロンプトの文字数";
+"Stream Started At" = "ストリーム開始";
+"First Token At" = "最初のトークン";
+"Stream Completed At" = "ストリーム完了";
+"Time To First Token" = "初回トークンまでの時間";
+"Stream Duration" = "ストリーム時間";
+"Generation Duration" = "生成時間";
