--- a/Voice Chat/zh-Hans.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hans.lproj/Localizable.strings
@@ -139,3 +139,43 @@
 "TTS response was not audio data." = "TTS 响应不是音频数据。";
 "TTS response was not audio: %@" = "TTS 响应不是音频：%@";
 "Received audio data could not be played." = "收到的音频数据无法播放。";
+"Developer" = "开发者";
+"Developer Mode" = "开发者模式";
+"Details" = "详细信息";
+"Message Details" = "消息详情";
+"Not Available" = "暂无";
+"Yes" = "是";
+"No" = "否";
+"User" = "用户";
+"Assistant" = "助手";
+"Identity" = "标识";
+"Branching" = "分支";
+"Session" = "会话";
+"Telemetry" = "统计信息";
+"Timing" = "时间信息";
+"Message ID" = "消息 ID";
+"Created At" = "创建时间";
+"Sender" = "发送方";
+"Active" = "是否活跃";
+"Active Child Message ID" = "当前子消息 ID";
+"Parent Message ID" = "父消息 ID";
+"Child Messages" = "子消息数量";
+"Child Message IDs" = "子消息 ID 列表";
+"Chat Session ID" = "会话 ID";
+"Chat Session Title" = "会话标题";
+"Active Root Message ID" = "当前根消息 ID";
+"Model Identifier" = "模型标识";
+"API Base URL" = "API 基础地址";
+"Request ID" = "请求 ID";
+"Finish Reason" = "结束原因";
+"Error Description" = "错误描述";
+"Delta Count" = "增量片段数";
+"Character Count" = "字符数";
+"Prompt Message Count" = "提示消息数";
+"Prompt Character Count" = "提示字符数";
+"Stream Started At" = "流式开始时间";
+"First Token At" = "首个 Token 时间";
+"Stream Completed At" = "流式完成时间";
+"Time To First Token" = "首 Token 延迟";
+"Stream Duration" = "流式耗时";
+"Generation Duration" = "生成耗时";
