--- a/Voice Chat/zh-Hant.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hant.lproj/Localizable.strings
@@ -139,3 +139,43 @@
 "TTS response was not audio data." = "TTS 回應不是音訊資料。";
 "TTS response was not audio: %@" = "TTS 回應不是音訊：%@";
 "Received audio data could not be played." = "收到的音訊資料無法播放。";
+"Developer" = "開發者";
+"Developer Mode" = "開發者模式";
+"Details" = "詳細資訊";
+"Message Details" = "訊息詳情";
+"Not Available" = "暫無";
+"Yes" = "是";
+"No" = "否";
+"User" = "使用者";
+"Assistant" = "助理";
+"Identity" = "識別";
+"Branching" = "分支";
+"Session" = "會話";
+"Telemetry" = "統計資訊";
+"Timing" = "時間資訊";
+"Message ID" = "訊息 ID";
+"Created At" = "建立時間";
+"Sender" = "傳送者";
+"Active" = "是否啟用";
+"Active Child Message ID" = "目前子訊息 ID";
+"Parent Message ID" = "父訊息 ID";
+"Child Messages" = "子訊息數量";
+"Child Message IDs" = "子訊息 ID 清單";
+"Chat Session ID" = "會話 ID";
+"Chat Session Title" = "會話標題";
+"Active Root Message ID" = "目前根訊息 ID";
+"Model Identifier" = "模型識別碼";
+"API Base URL" = "API 基礎位址";
+"Request ID" = "請求 ID";
+"Finish Reason" = "結束原因";
+"Error Description" = "錯誤描述";
+"Delta Count" = "增量片段數";
+"Character Count" = "字元數";
+"Prompt Message Count" = "提示訊息數";
+"Prompt Character Count" = "提示字元數";
+"Stream Started At" = "串流開始時間";
+"First Token At" = "首個 Token 時間";
+"Stream Completed At" = "串流完成時間";
+"Time To First Token" = "首 Token 延遲";
+"Stream Duration" = "串流耗時";
+"Generation Duration" = "生成耗時";
