--- a/Voice Chat/zh-Hant.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hant.lproj/Localizable.strings
@@ -109,6 +109,7 @@
 "Waiting for connection" = "等待連線";
 "Unable to set up audio session: %@" = "無法設定音訊工作階段：%@";
 "Search Chats" = "搜尋聊天";
+"No chats yet" = "尚無聊天記錄";
 "No chats match \"%@\"" = "沒有與「%@」相符的聊天";
 "No Results" = "沒有結果";
 "Try a different chat name." = "試試不同的聊天名稱。";
