--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -108,7 +108,10 @@
 "Traditional Chinese" = "Traditional Chinese";
 "Japanese" = "Japanese";
 "Chat API URL" = "Chat API URL";
+"Chat API Key" = "Chat API Key";
+"Chat Preset" = "Chat Preset";
 "Enter chat API URL" = "Enter chat API URL";
+"Enter API key" = "Enter API key";
 "GPT weights path" = "GPT weights path";
 "Reference text (optional)" = "Reference text (optional)";
 "Save" = "Save";
@@ -175,7 +178,6 @@
 "Time To First Token" = "Time To First Token";
 "Stream Duration" = "Stream Duration";
 "Generation Duration" = "Generation Duration";
-
 "System Prompt" = "System Prompt";
 "Normal Mode Preset" = "Normal Mode Preset";
 "Voice Mode Preset" = "Voice Mode Preset";
