--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -110,6 +110,7 @@
 "Chat API URL" = "Chat API URL";
 "Chat API Key" = "Chat API Key";
 "Chat Preset" = "Chat Preset";
+"Voice Server Preset" = "Voice Server Preset";
 "Enter chat API URL" = "Enter chat API URL";
 "Enter API key" = "Enter API key";
 "GPT weights path" = "GPT weights path";
