adjust settings view arrangement

--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -192,3 +192,22 @@
 "Used for voice chat mode" = "Used for voice chat mode";
 "Add prompt preset" = "Add prompt preset";
 "Delete selected prompt preset" = "Delete selected prompt preset";
+"Servers" = "Servers";
+"Prompts" = "Prompts";
+"Preset" = "Preset";
+"Server URL" = "Server URL";
+"Server URL is empty or invalid." = "Server URL is empty or invalid.";
+"Invalid Server URL" = "Invalid Server URL";
+"API Key" = "API Key";
+"Model" = "Model";
+"Chat server responded with status %d." = "Chat server responded with status %d.";
+"Chat Prompt" = "Chat Prompt";
+"Prompt" = "Prompt";
+"Used for chat mode" = "Used for chat mode";
+"Used for voice mode" = "Used for voice mode";
+"Add preset" = "Add preset";
+"Delete selected preset" = "Delete selected preset";
+"Chat" = "Chat";
+"Chat Model" = "Chat Model";
+"Voice Settings" = "Voice Settings";
+"Voice Model" = "Voice Model";
