--- a/Voice Chat/zh-Hans.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hans.lproj/Localizable.strings
@@ -196,3 +196,22 @@
 "Used for voice chat mode" = "用于语音聊天模式";
 "Add prompt preset" = "添加提示词预设";
 "Delete selected prompt preset" = "删除选中的提示词预设";
+"Servers" = "服务器";
+"Prompts" = "提示词";
+"Preset" = "预设";
+"Server URL" = "服务器地址";
+"Server URL is empty or invalid." = "服务器地址为空或无效。";
+"Invalid Server URL" = "服务器地址无效";
+"API Key" = "API 密钥";
+"Model" = "模型";
+"Chat server responded with status %d." = "聊天服务器返回状态码 %d。";
+"Chat Prompt" = "聊天提示词";
+"Prompt" = "提示词";
+"Used for chat mode" = "用于聊天模式";
+"Used for voice mode" = "用于语音模式";
+"Add preset" = "添加预设";
+"Delete selected preset" = "删除选中的预设";
+"Chat" = "聊天配置";
+"Chat Model" = "聊天模型";
+"Voice Settings" = "语音配置";
+"Voice Model" = "语音模型";
