--- a/Voice Chat/ja.lproj/Localizable.strings
+++ b/Voice Chat/ja.lproj/Localizable.strings
@@ -196,3 +196,22 @@
 "Used for voice chat mode" = "音声チャットモードで使用";
 "Add prompt preset" = "プロンプトプリセットを追加";
 "Delete selected prompt preset" = "選択したプロンプトプリセットを削除";
+"Servers" = "サーバー";
+"Prompts" = "プロンプト";
+"Preset" = "プリセット";
+"Server URL" = "サーバーURL";
+"Server URL is empty or invalid." = "サーバーURLが空または無効です。";
+"Invalid Server URL" = "サーバーURLが無効です";
+"API Key" = "APIキー";
+"Model" = "モデル";
+"Chat server responded with status %d." = "チャットサーバーがステータス %d を返しました。";
+"Chat Prompt" = "チャットプロンプト";
+"Prompt" = "プロンプト";
+"Used for chat mode" = "チャットモードで使用";
+"Used for voice mode" = "音声モードで使用";
+"Add preset" = "プリセットを追加";
+"Delete selected preset" = "選択したプリセットを削除";
+"Chat" = "チャット";
+"Chat Model" = "チャットモデル";
+"Voice Settings" = "音声設定";
+"Voice Model" = "音声モデル";
