--- a/Voice Chat/en.lproj/Localizable.strings
+++ b/Voice Chat/en.lproj/Localizable.strings
@@ -214,3 +214,10 @@
 "Chat Model" = "Chat Model";
 "Voice Settings" = "Voice Settings";
 "Voice Model" = "Voice Model";
+"Tap to reconnect" = "Tap to reconnect";
+"Microphone is unavailable." = "Microphone is unavailable.";
+"Server address is not configured." = "Server address is not configured.";
+"Unable to connect to the chat and voice servers." = "Unable to connect to the chat and voice servers.";
+"Unable to connect to the chat server." = "Unable to connect to the chat server.";
+"Unable to connect to the voice server." = "Unable to connect to the voice server.";
+"Unable to connect. Please check your server settings." = "Unable to connect. Please check your server settings.";
