--- a/Voice Chat/zh-Hans.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hans.lproj/Localizable.strings
@@ -218,3 +218,10 @@
 "Chat Model" = "聊天模型";
 "Voice Settings" = "语音配置";
 "Voice Model" = "语音模型";
+"Tap to reconnect" = "点击重连";
+"Microphone is unavailable." = "麦克风不可用。";
+"Server address is not configured." = "服务器地址未配置。";
+"Unable to connect to the chat and voice servers." = "无法连接到聊天服务和语音服务。";
+"Unable to connect to the chat server." = "无法连接到聊天服务。";
+"Unable to connect to the voice server." = "无法连接到语音服务。";
+"Unable to connect. Please check your server settings." = "无法连接，请检查服务器设置。";
