--- a/Voice Chat/ja.lproj/Localizable.strings
+++ b/Voice Chat/ja.lproj/Localizable.strings
@@ -228,3 +228,10 @@
 "Unable to connect to the voice server." = "音声サーバーに接続できません。";
 "Unable to connect. Please check your server settings." = "接続できません。サーバー設定を確認してください。";
 "Speech recognition stopped unexpectedly." = "音声認識が予期せず停止しました。";
+"Checking data..." = "データを確認中...";
+"Data Error" = "データエラー";
+"The app could not read local data at launch." = "起動時にローカルデータを読み取れませんでした。";
+"Exit" = "終了";
+"Resetting..." = "リセット中...";
+"Reset Data and Continue" = "データをリセットして続行";
+"Reset data failed.\n%@" = "データのリセットに失敗しました。\n%@";
