--- a/Voice Chat/zh-Hant.lproj/Localizable.strings
+++ b/Voice Chat/zh-Hant.lproj/Localizable.strings
@@ -117,6 +117,12 @@
 "Waiting for connection" = "等待連線";
 "Unable to set up audio session: %@" = "無法設定音訊工作階段：%@";
 "Search Chats" = "搜尋聊天";
+"Today" = "今天";
+"Yesterday" = "昨天";
+"Last 7 Days" = "最近 7 天";
+"Last 30 Days" = "最近 30 天";
+"Past Year" = "過去一年";
+"Older" = "更早";
 "No chats yet" = "尚無聊天記錄";
 "No chats match \"%@\"" = "沒有與「%@」相符的聊天";
 "No Results" = "沒有結果";
